# RT2_Assignment2

./: .gitignore  NODE_ARCHITECTURE.md  README.md
g1_description/: CMakeLists.txt  g1_23dof.urdf  package.xml
notebooks/: KeyFrameTrajectory.txt  ipywidgets.ipynb
sam_perception/: package.xml  setup.cfg  setup.py
sam_perception/sam_perception/: dataset_node.py  deeplabv3_node.py  sam2_node.py
sam_simulation/: CMakeLists.txt  package.xml
sam_simulation/config/: g1_controllers.yaml
sam_simulation/launch/: gazebo_indoor.launch.py
sam_simulation/scripts/: gait_animator.py
sam_simulation/urdf/: g1_sensors.urdf.xacro
sam_simulation/worlds/: indoor_room.world
slam_fusion/: CMakeLists.txt  package.xml
slam_fusion/config/: cartographer_g1.lua  cartographer_tum.lua  g1_gazebo_camera.yaml
slam_fusion/launch/: dataset_pipeline.launch.py  eval_cartographer.launch.py  eval_orbslam3.launch.py  eval_rtabmap.launch.py  semantic_pipeline.launch.py
slam_fusion/rviz/: mapping.rviz
slam_fusion/scripts/: KeyFrameTrajectory.txt  evaluate_trajectory.sh  gazebo_groundtruth_exporter.py  performance_dashboard.py  performance_monitor.py  semantic_evaluator_node.py  tf_to_odom.py  trajectory_exporter.py
slam_fusion/src/: semantic_fusion.cpp
