<?xml version="1.0"?>
<package format="3">
  <name>g1_description</name>
  <version>1.0.0</version>
  <description>Unitree G1 humanoid robot description</description>
  <maintainer email="unitree@unitree.com">Unitree</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
